2005-09-26  Ahmad Riza H Nst  <rizahnst@id.gnome.org>

	* configure.in: Added "id" in ALL_LINGUAS line.

2005-09-14  Lars Clausen  <lars@raeder.dk>

	* objects/UML/class.c (umlclass_load): Set mainpoint obj upon
	loading.  Fixes bug #315427.

2005-09-11  Hans Breuer  <hans@breuer.org>

	* objects/standard/arc.c objects/standard/textobj.c : fix
	C99isms, Dia is supposed to compile with C89 like msvc

	* app/makefile.msc : use the wrong center-point-magnetism
	icons for the win32 build, too.

	* plug-ins/python/pydia-error.c : dont crash on C escape
	sequences in the error string
	* plug-ins/python/pydia-render.c : dont free filename twice

	* plug-ins/python/dot.py : start of an exporter to DOT language
	which can be processed by www.graphviz.org tools

2005-09-05  Iñaki Larrañaga  <dooteo@euskalgnu.org>

	* configure.in: Added "doc/eu/Makefile" for Basque documentation.

2005-09-04  Iñaki Larrañaga  <dooteo@euskalgnu.org>

	* configure.in: Added "eu" to ALL_LINGUAS.

2005-09-04  Lars Clausen  <lars@raeder.dk>

	* lib/element.h (ELEMENT_COMMON_PROPERTIES): Remove object
	dimensions frame to make ext_attributes work again.

	* app/grid.c (snap_to_grid): Bugfix from Zhang Lin-bo
	<zlb@lsec.cc.ac.cn>: Use dynamic grid setting from diagram, not
	global prefs.

	* objects/standard/textobj.c: Applied patch from Grégoire Dooms
	<dooms info ucl ac be>: Add vertical alignment for standard text
	object.  This should really be moved into lib/text.c and apply to
	all text objects.

2005-09-03  Lars Clausen  <lars@raeder.dk>

	* app/connectionpoint_ops.c (connectionpoint_draw): Only draw
	mainpoint when snap-to-objects is not on.

	* app/Makefile.am (ICON_PNG_PAIRS): 
	Fake icons for snap-to-objects.

	* app/commands.[ch]: 
	* app/menus.c (menus_get_image_menubar): 
	* app/display.[ch]: 
	* app/interface.c (create_display_shell): 
	* app/create_object.c (create_object_button_release): 
	* app/disp_callbacks.c (ddisplay_drop_object): 
	* app/object_ops.[ch]: 